--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/compiler-cli": "16.0.5",
     "@angular/language-service": "16.0.5",
     "@compodoc/compodoc": "^1.1.21",
+    "@cypress/webpack-dev-server": "^2.0.0",
     "@nrwl/cypress": "16.3.2",
     "@nrwl/eslint-plugin-nx": "16.3.2",
     "@nrwl/jest": "16.3.2",
@@ -61,10 +62,11 @@
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "bootstrap": "5",
-    "cypress": "^12.2.0",
+    "cypress": "^12.11.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "13.1.1",
